pacman/manifest-pacman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"pacman","namespace":"pacman"},"spec":{"template":{"spec":{"containers":[{"name":"pacman","resources":{"requests":{"cpu":"1m"}}}]}}}}
  creationTimestamp: "2024-02-20T13:03:27Z"
  generation: 4
  labels:
    app: pacman
  name: pacman
  namespace: pacman-argo
  resourceVersion: "33363"
  uid: c8696e4f-352a-4e2e-81bf-3f4dabec0ce4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pacman
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pacman
    spec:
      containers:
      - image: ghcr.io/luispeixotoctw/pacman:2.0
        imagePullPolicy: IfNotPresent
        name: pacman
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 1m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-02-20T13:03:27Z"
    lastUpdateTime: "2024-02-21T13:38:37Z"
    message: ReplicaSet "pacman-556554fd48" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-02-22T11:30:03Z"
    lastUpdateTime: "2024-02-22T11:30:03Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
