pacman/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
  selector:
      name: pacman
